🔄 Cargar gasolineras según la selección | script.js

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <!-- Opciones añadidas desde API -->
             </select>
 
-            <button type="submit">Filtrar</button>
+            <button id="resetear" type="reset">Limpiar filtros</button>
         </form>
     </nav>
 
