✅ checkbox abierto ahora | script.js

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                 <!-- Opciones añadidas desde API -->
             </select>
 
+            <!-- Filtrar gasolineras abiertas -->
+            <label for="abierta">
+                <input type="checkbox" id="abierta" name="abierta">
+                Solo abiertas ahora
+            </label>
+
+
             <button id="resetear" type="reset">Limpiar filtros</button>
         </form>
     </nav>
